<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="UseSwitchCompatOrMaterialXml" >

    <data>
        <import type="com.hcs.android.ui.util.ShowUtil" />
        <variable
            name="log"
            type="com.hcs.commondemo.entity.LogBo" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvDmesgPath"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/log_dmesg_path"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/log_dmesg_path"
            android:text="@{log.dmesgDir}"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/tvDmesgPath"/>

        <TextView
            android:id="@+id/tvDmesgEnable"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/log_dmesg_enable"
            android:layout_below="@id/tvDmesgPath"
            android:layout_marginTop="10dp"
            />

        <Switch
            android:id="@+id/swEnableDmesg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvDmesgPath"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/tvDmesgEnable"
            android:checked="@{log.enableDmesg}" />


        <TextView
            android:id="@+id/tvLogcatPath"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/log_logcat_path"
            android:layout_below="@id/tvDmesgEnable"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/log_logcat_path"
            android:text="@{log.logcatDir}"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_below="@+id/tvDmesgEnable"
            android:layout_toRightOf="@+id/tvDmesgPath"/>

        <TextView
            android:id="@+id/tvLogcatEnable"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/log_logcat_enable"
            android:layout_below="@id/tvLogcatPath"
            android:layout_marginTop="10dp"
            />

        <Switch
            android:id="@+id/swEnableLogcat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvLogcatPath"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/tvLogcatEnable"
            android:checked="@{log.enableLogcat}" />


        <TextView
            android:id="@+id/tvPcapPath"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/log_pcap_path"
            android:layout_below="@id/tvLogcatEnable"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/log_pcap_path"
            android:text="@{log.pcapDir}"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_below="@+id/tvLogcatEnable"
            android:layout_toRightOf="@+id/tvLogcatPath"/>

        <TextView
            android:id="@+id/tvPcapEnable"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/log_pcap_enable"
            android:layout_below="@id/tvPcapPath"
            android:layout_marginTop="10dp"
            />

        <Switch
            android:id="@+id/swEnablePcap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvPcapPath"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/tvPcapEnable"
            android:checked="@{log.enablePcap}"/>
    </RelativeLayout>
</layout>