<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="com.hcs.commondemo.viewmodel.MulticastViewModel"/>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/llCtrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/multicast_listen_address"
                android:gravity="center|left"
                />
            <EditText
                android:id="@+id/etListenAddress"
                android:layout_width="wrap_content"
                android:minWidth="20dp"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:hint="@string/multicast_listen_address"
                android:text="@={viewModel.multicastAddress}"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/multicast_listen_port"
                android:gravity="center|left"
                />
            <EditText
                android:id="@+id/etListenPort"
                android:layout_width="wrap_content"
                android:minWidth="20dp"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:hint="@string/multicast_listen_port"
                android:text="@={viewModel.multicastPort}"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/multicast_send_message"
                android:gravity="center|left"
                android:layout_marginLeft="20dp"
                />
            <EditText
                android:id="@+id/etGroupName"
                android:layout_width="wrap_content"
                android:minWidth="200dp"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:hint="@string/multicast_send_message"
                android:text="@={viewModel.message}"
                />
            <Button
                android:id="@+id/btnSendMessage"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/multicast_send"/>


        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:background="#2108141F" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </LinearLayout>


</layout>